# Norscode

./: -o  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  C_DEPRECATION.md  Dockerfile  Dockerfile.linux-build  FASE2_COMPLETED.md  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  INSTALL.md  INTEGRATE_NATIVE_TCP.md  Makefile  NORSCODE_VS_FASTAPI_COMPARISON.md  NORSCODE_VS_PYTHON_COMPARISON.md  PRODUCTION_RELEASE_v1.0.md  PURE_NORSCODE_SOLUTION.md  PYTHON_DEPRECATION.md  README.md  RELEASE_v1.0_SELFHOST.md  ROADMAP.md  SELVSTENDIGHET_FULLSTENDIG.md  SERVE_QUICKSTART.md  SOCKET_IMPLEMENTATION_COMPLETE.md  STATUS_PRODUCTION_READY.md  STEG_C_PLAN.md  STEG_C_STATUS.md  app.elf  app.no  butikk.nors  main.py  nl  norcode.toml  norscode-cli-demo.json  norscode_ai_motor.no  norscode_db_integration_example.db  (+28 more)
.claude/: settings.local.json
Hjemmeside/: app.ncb.json  app.no  compiler  innstillingar.toml  manage.no  norcode.toml  runtime  selfhost  std
NorsDB/: README.md  RELEASE_NOTES.md  _tmp_import.no  norsdb.nors  norsdb_core.nors  norsdb_crud.nors  norsdb_index.nors  norsdb_schema.nors  norsdb_security.nors  norsdb_smoke.nors  norsdb_tx.nors
ai_assistent/: ai_leser.no  ai_logg.no  ai_patch.no  ai_plan.no  ai_prosjekt.no  ai_status.no  ai_test.no  filrapport.txt  logg.txt  patch_forslag.txt  rapport.txt  utviklingsplan.txt
ai_assistent_bak_v101_files_ok/: AI_TRYGG_ENDRING_V71_75.txt  README.txt  status.txt  testplan.txt
ai_moduler/: kodegen.nors  kodegen_ai_demo_v361.no  kodegen_fil_leser_v321.no  (+9 more)
(+4351 files in other folders)
