[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "norcode"
version = "1.0.0"
description = "Norscode compiler and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["norsk", "language", "compiler", "cli"]
authors = [
  { name = "Jan Steinar Sætre" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Other",
  "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/rfwwp8k542-maker/Norscode"
Repository = "https://github.com/rfwwp8k542-maker/Norscode"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.0",
  "twine>=5.1.1",
]

[project.scripts]
norcode = "norcode.legacy_main:main"
nor = "norcode.legacy_main:main"
nl = "norcode.legacy_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["norcode*"]
